--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -66,7 +66,7 @@ submenu:
 
 menu_settings:
   # Only show by icon.
-  icon_only: false
+  icon_only: ture
   # Only show by text.
   text_only: false
 
