--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -149,7 +149,7 @@ header:
     # In site directory (source/uploads): /uploads/avatar.png
     # You can also use a link of image.
     # url: https://img-blog.csdnimg.cn/9dfca27c179f4164b02cca66ab6af0c6.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBAQW5kcmV3Lu-_vQ==,size_20,color_FFFFFF,t_70,g_se,x_16#pic_center
-    url: https://pic3.zhimg.com/80/v2-e6fd0babf62cb517120c8ed864d41526_720w.jpg
+    url: https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fup.enterdesk.com%2Fedpic%2F0c%2F1f%2F30%2F0c1f30be539a8e3bcbc7a258814422dd.jpg&refer=http%3A%2F%2Fup.enterdesk.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1649909893&t=3934d0a6ad4de6d53f07b47f74bf6e20
   mask:
     enable: false
     # Opacity of the mask (value: 0 ~ 1)
