--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -144,7 +144,7 @@ header:
   height: 100%
   # Background image of site header.
   bg_image:
-    enable: true
+    enable: false
     # In theme directory (source/images): /images/avatar.png
     # In site directory (source/uploads): /uploads/avatar.png
     # You can also use a link of image.
