--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: stun
+theme: lx
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
