--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it": "^6.0.0",
+    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
