--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.2",
-    "hexo-renderer-markdown-it": "^6.0.1",
     "hexo-renderer-mathjax": "^0.6.0",
+    "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
