--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -1055,7 +1055,7 @@ static_prefix:
 
   nprogress: https://lib.baomitu.com/nprogress/0.2.0/
 
-  mathjax: https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js
+  mathjax: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   # https://lib.baomitu.com/mathjax/3.2.0/
   # https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js
   
