--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -1081,4 +1081,4 @@ static_prefix:
   hint: https://lib.baomitu.com/hint.css/2.7.0/
 
 pandoc:
-  pandoc_path: E:/Documents/Repositories/pandoc-2.18-windows-x86_64/pandoc-2.18/pandoc.exe
+  pandoc_path: D:/pandoc/pandoc-2.19.2/pandoc.exe
