--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,8 @@ ignore:
 theme: fluid
 
 plugins:
-  # - hexo-renderer-pandoc
+  - hexo-filter-mathjax
+  - hexo-renderer-pandoc
   # - hexo-renderer-mathjax
   # - hexo-renderer-markdown-it
   # - markdown-it-footnote
@@ -138,10 +139,18 @@ markdown:
     permalinkSymbol: ¶
 
 
-  math:
-    engine: 'mathjax'
-    mathjax:
-        src: "//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-        config:
-            tex2jax:
-                inlineMath: [ ['$','$'], ["\\(","\\)"] ]
+math:
+  engine: 'mathjax'
+  mathjax:
+      src: "https://cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+      config:
+          tex2jax:
+              inlineMath: [ ['$','$'], ["\\(","\\)"] ]
+
+mathjax:
+  tags: none # 或 'ams' 或 'all'
+  single_dollars: true # 启用单个美元符号作为内联（行内）数学公式定界符
+  cjk_width: 0.9 # 相对 CJK 字符宽度
+  normal_width: 0.6 # 相对正常（等宽）宽度
+  append_css: true # 将 CSS 添加到每个页面
+  every_page: false # 如果为 true，那么无论每篇文章的前题中的 `mathjax` 设置如何，每页都将由 mathjax 呈现
