--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
     "version": "6.1.0"
   },
   "dependencies": {
+    "co": "^4.6.0",
     "hexo": "^6.0.0",
-    "hexo-cli": "^4.3.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-math": "^4.0.0",
+    "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-kramed": "^0.1.2",
+    "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-markdown-it-plus": "^1.0.6",
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-pug": "^2.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
     "markdown-it-emoji": "^2.0.0"
