fluid force https

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ author:
 language: en
 timezone: ''
 
+force_https: true
+
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://Andrew-Rey.github.io
