--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -224,7 +224,7 @@ color:
 # 主题字体配置
 # Font
 font:
-  font_size: 16px
+  font_size: 14px
   font_family:
   letter_spacing: 0.02em
   code_font_size: 85%
@@ -457,7 +457,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -467,7 +467,7 @@ index:
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
   # Available: 0 - 1.0
-  banner_mask_alpha: 0.3
+  banner_mask_alpha: 0.2
 
   # 首页副标题的独立设置
   # Independent config of home page subtitle
@@ -476,7 +476,7 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "\"喵\""
+    text: "\"当你的天空突然下起了大雨\""
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
@@ -529,13 +529,13 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
 
   # 文章在首页的默认封面图，当没有指定 index_img 时会使用该图片，若两者都为空则不显示任何图片
   # Path of the default post cover when `index_img` is not set. If both are empty, no image will be displayed
-  default_index_img:
+  default_index_img: /img/haibara3.png
 
   # 文章标题下方的元信息
   # Meta information below title
@@ -871,7 +871,7 @@ cusdis:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
 
@@ -882,7 +882,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
 
@@ -911,7 +911,7 @@ category:
 #---------------------------
 tag:
   enable: false
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   tagcloud:
@@ -928,7 +928,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   avatar: /img/head_round.png
@@ -950,7 +950,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
 
@@ -961,7 +961,7 @@ page:
 #---------------------------
 page404:
   enable: true
-  banner_img: /img/bg5.jpg
+  banner_img: /img/bg0.jpg
   banner_img_height: 80
   banner_mask_alpha: 0.3
   # 重定向到首页的延迟(毫秒)
