compiler-meddlecode finished

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.1.0"
   },
   "dependencies": {
+    "cnpm": "^9.0.1",
     "co": "^4.6.0",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
@@ -28,11 +29,13 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-pandoc": "^0.3.1",
     "hexo-renderer-pug": "^2.0.0",
+    "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-sass-next": "^0.1.2",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-renderer-swig": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
-    "markdown-it-emoji": "^2.0.0"
+    "markdown-it-emoji": "^2.0.0",
+    "node-sass": "^8.0.0"
   }
 }
