--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-inject": "^1.0.0",
+    "hexo-math": "^4.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it-plus": "^1.0.6",
