--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "version": "6.1.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cnpm": "^9.0.1",
     "co": "^4.6.0",
     "hexo": "^6.0.0",
+    "hexo-asset-image": "^1.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-filter-mathjax": "^0.9.0",
     "hexo-generator-archive": "^1.0.0",
