--- a/source/_data/keep.yml
+++ b/source/_data/keep.yml
@@ -11,7 +11,7 @@
 # ---------------------------------------------------------------------------------------
 base_info:
   # Your blog website title
-  title: Notes
+  title: 云边有个小卖部
 
   # Your blog website author name
   author: Andrew-Rey
