--- a/source/_data/keep.yml
+++ b/source/_data/keep.yml
@@ -171,8 +171,8 @@ code_block:
   # Toolbar include: "code copy", "code block collapse" and "code language"
   tools:
     enable: true            # Option values: true | false
-    style: default           # Option values: default | mac
-  highlight_theme: obsidian   # Option values: default | obsidian
+    style: default              # Option values: default | mac
+  highlight_theme: default   # Option values: default | obsidian
 
 # ---------------------------------------------------------------------------------------
 # Table of Contents in the Sidebar
